--- a/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
+++ b/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
@@ -4046,6 +4046,14 @@ template {
 .ant-form-item > .ant-col.ant-form-item-label {
   padding-right: 0;
   padding-left: 0;
+  white-space: initial;
+}
+.ant-form-item > .ant-col.ant-form-item-label > label {
+  display: block;
+  width: 100%;
+  height: auto;
+  white-space: normal;
+  overflow-wrap: anywhere;
 }
 .ant-form-item.ant-form-item-vertical > .ant-col.ant-form-item-label > label, .ant-form-item:not(.ant-row) > .ant-col.ant-form-item-label > label {
   height: auto;
